Fix alignment issue with winning card crown

--- a/js/game.css
+++ b/js/game.css
@@ -176,14 +176,14 @@ ul {
 }
 
 .game_area .big_crown {
-    position: relative;
+    position: absolute;
     width: 48px;
     height: 48px;
     background-image: url("./crown.png");
     background-size: cover;
     display: inline-block;
     left: -24px;
-    bottom: 40px;
+    bottom: 0px;
 }
 
 .game_area .my_area {
